# StatefulJit

./: .gitignore  AST.h  CMakeLists.txt  Codegen.cpp  Codegen.h  Globals.h  KaleidoscopeJIT.h  Lexer.h  Parser.h  README.md  StatefulJitApi.h  StatefulPJ.h  StatefulPJ.sln  StatefulPJ.vcxproj  StatefulPJ.vcxproj.filters  TestStatefulPJHook.h  configure-msvc.bat  main.cpp
Client/InteractiveStatefulPJ/: InteractiveStatefulPJ.vcxproj  console.cpp
Clients/InteractiveClient/: CMakeLists.txt  InteractiveClient.vcxproj  InteractiveClient.vcxproj.filters  console.cpp
Clients/TestClient/: CMakeLists.txt  TestClient.vcxproj  test.cpp
Test/TestStatefulPJ/: TestStatefulPJ.vcxproj  main.cpp  test.cpp
docs/: patch-llvm-cmakelists.html
src/: AST.h  Codegen.cpp  Codegen.h  Globals.h  KaleidoscopeJIT.h  Lexer.h  Parser.h  StatefulJit.cpp  StatefulJit.h  StatelessJit.cpp  StatelessJit.h
